added syntax highlighting support